# MobileGlues-Adreno

./: CLAUDE.md
.github/workflows/: build.yml
MobileGlues-cpp/: CMakeLists.txt  main.cpp
MobileGlues-cpp/config/: settings.h
MobileGlues-cpp/core/: gpu_detect.cpp  gpu_detect.h
plugin/: settings.gradle.kts
plugin/app/: build.gradle.kts
plugin/app/src/main/: AndroidManifest.xml
plugin/app/src/main/java/com/mobileglues/adreno/plugin/: MainActivity.java
